project/logs/20250711_150410.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Qembed_debug:48:40: error: read-only variable is not assignable
        output.color = gMaterial.color = textureColor * gDirectionalLight.color * cos * gDirectionalLight.intensity;
                       ~~~~~~~~~~~~~~~ ^

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

